restore toggle z-index; to be fixed in RFC209

--- a/web/src/extensions/ExtensionCard.scss
+++ b/web/src/extensions/ExtensionCard.scss
@@ -16,6 +16,10 @@
         background: unset;
     }
 
+    &__toggle {
+        z-index: 1;
+    }
+
     &__body:hover {
         text-decoration: none;
     }
